# mastering_large_datasets

./: README.md  pyproject.toml
chap_02/archive_rival_business.com/: app_1.py
chap_02/order_and_parallelization/: define_the_issue.py  order_vs_list.py
chap_02/paralle_programming/: account_cpu.py  dowloader_paralle.py  downloader.py  downloader_pare_using_pathos.py
chap_02/phone_mumber_list/: using_for_loop.py  using_map.py
chap_02/putting_it_all_together/: main.py  main_using_parel.py
chap_03/: hacker_translate.py
chap_03/hacker_translate/: hacker_translate_using_compose.py  hacker_translate_using_pipe.py
chap_03/util/: func.py
chap_04/: README.md
chap_04/combining_sequence_with_zip/: ice_cream_data.py
chap_04/lazy_file_searching_with_iglob/: main.py
chap_04/lazy_simulation/: simulation.py
chap_04/shrinking_sequences_with_filter/: retrieve_even_numbers.py  testing_variations_of_filters.py
chap_04/the_backbone_of_lazy_python/: even_number_generator.py  retrieve_m_words.py
chap_04/the_poetry_puzzle/: poem_puzzle.py  util.py
chap_05/analyzing_car_trends_with_reduce/: car_profit.py
chap_05/reductions_you_are_familia_with/: filter_with_reduce.py  frequancy_using_reduce.py  reduce_using_lambda.py  three_parts_of_reduce.py
chap_05/using_map_and_reduce_together/: scoring_word.py
