[tool.poetry]
name = "mastering-large-datasets"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@ideiasdinamicas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pathos = "^0.3.2"
networkx = "^3.3"
toolz = "^0.12.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
