[project]
name = "mastering-large-datasets"
version = "0.1.0"
description = ""
authors = ["jose.tandavala <jose.tandavala@ideiasdinamicas.com>"]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "network>=0.1",
    "python-twitter>=3.5",
    "toolz>=0.12.1",
    "twarc>=2.14.0",
]
